--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 			</div>
 			<div class="container">
 				<div class="single-about-txt">
+					<h3> The project name is Library Automation</h3>
 					<p>Fast and secure presentation of records and book tracking for any library by transferring them to a computer environment.</p>
 				</div>
 				
