--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
 				<div class="single-about-txt">
 					<p> • Lost books or books not delivered within a certain date. <br>
 						• There are many books and it is difficult to keep a record. <br>
-						• Failure to follow up the book delivery time regularly. <br>
-						• Excessive effort and time wasted. <br>
+						• Non-regular tracking of the book delivery time. <br>
+						• Too much effort and waste of time. <br>
 						• People who are not registered in the system try to borrow books. <br>
 						• Understanding whether the searched book is available or not.
 					</p>
@@ -255,12 +255,12 @@
 			<div class="container">
 				<div class="single-about-txt">
 					<p> • It can be determined who has the last lost book or books. <br>
-						• Thousands, maybe millions of books can be easily searched by saving their records Dec a database with all their information. <br>
+						• Thousands, maybe millions of books can be save into a database, and all information can be easily searched. <br>
 						• The information of existing books can be updated. <br>
 						* Can delete an existing book from the system. <br>
 						• Can add new books to the system. <br>
 						• Keeping the information about which book has been lent to whom for how many days, accurate and without doubt, using features such as book lending. <br>
-						* View saved contacts in the system. <br>
+						  View saved contacts in the system. <br>
 						• Saving time and energy.
 					</p>
 				</div>
@@ -278,7 +278,7 @@
 			</div>
 			<div class="container">
 				<div class="single-about-txt">
-					<p>Data loss may occur because the database does not have the option to take backups in automation.  Because Excel also does not have the ability to transfer ready-made data to automation, if there is a lot of data, you can have to enter it all manually. Before performing irreversible actions such as deleting, adding, updating, the system gives a yes, no message in the form of a little bit of unwanted changes can be prevented in this way.</p>
+					<p>Data loss may occur because the database doesn't have the option to take backups in automation. Because Excel also doesn't have the ability to transfer ready-made data to automation, if there is a lot of data, you can have to enter it all manually. The system gives a yes or no message before irreversible proccess like deleting, adding, updating, etc. The system prevents unwanted changes in this way.</p>
 				</div>
 				
 			</div>
