--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 					<p> • It can be determined who has the last lost book or books. <br>
 						• Thousands, maybe millions of books can be save into a database, and all information can be easily searched. <br>
 						• The information of existing books can be updated. <br>
-						* Can delete an existing book from the system. <br>
+						• Can delete an existing book from the system. <br>
 						• Can add new books to the system. <br>
 						• Keeping the information about which book has been lent to whom for how many days, accurate and without doubt, using features such as book lending. <br>
 						  View saved contacts in the system. <br>
