--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 						• Can delete an existing book from the system. <br>
 						• Can add new books to the system. <br>
 						• Keeping the information about which book has been lent to whom for how many days, accurate and without doubt, using features such as book lending. <br>
-						  View saved contacts in the system. <br>
+						• View saved contacts in the system. <br>
 						• Saving time and energy.
 					</p>
 				</div>
