--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<p>
-									My name is Yusuf Moğultay, i am 21 years old i was born and raised in Istanbul. I study at Mersin University which department is Computer Technology and Information System 3rd grade. My tall is 179 cm and weight is 78kg and i often go to gym, my hobbies are playing football, playing video games, travelling, swimming. I wanna be a good developer in the future especially in C#, SQL and Web field. I have several projects that I am developed for example dynamic personnel website, you can sign up or sign in into site see the projects and get information about me. I wanna continue my education abroad by doing a master's degree.
+									My name is Yusuf Moğultay, i am 21 years old i was born and raised in Istanbul. I study at Mersin University which department is Computer Technology and Information System 3rd grade. My tall is 179 cm and weight is 78kg and i often go to gym, my hobbies are playing football, playing video games, travelling, swimming. I wanna be a good developer in the future especially in C#, SQL and Web field. I have several projects that I am developed for example dynamic personnel website, you can sign up or sign in into site see the projects and get information about me. I started programming in high school, I learned C#, HTML, CSS, SQL Database in high school, so I chose this department at university and I am happy for it.I wanna continue my education abroad by doing a master's degree. Nest year i am gonna go to erasmus program, this is the just beginning.
 								</p>
 								<div class="row">
 									<div class="col-sm-6">
